--- a/index.html
+++ b/index.html
@@ -121,19 +121,136 @@ yarn add tzklar
 			<nav class="tsd-navigation secondary menu-sticky">
 				<ul class="before-current">
 					<li class=" tsd-kind-interface">
+						<a href="interfaces/asset.html" class="tsd-kind-icon">Asset</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/attribute.html" class="tsd-kind-icon">Attribute</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/bytes.html" class="tsd-kind-icon">Bytes</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="interfaces/contractmetadata.html" class="tsd-kind-icon">Contract<wbr>Metadata</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/contractmetadatatzip16.html" class="tsd-kind-icon">Contract<wbr>MetadataTZIP16</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/dynamicerrortranslator.html" class="tsd-kind-icon">Dynamic<wbr>Error<wbr>Translator</a>
 					</li>
 					<li class=" tsd-kind-interface">
 						<a href="interfaces/filetoprocess.html" class="tsd-kind-icon">File<wbr>ToProcess</a>
 					</li>
 					<li class=" tsd-kind-interface">
+						<a href="interfaces/format.html" class="tsd-kind-icon">Format</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/genericprimanynumberofargswithorwithoutannot.html" class="tsd-kind-icon">Generic<wbr>Prim<wbr>Any<wbr>Number<wbr>OfArgs<wbr>With<wbr>OrWithout<wbr>Annot</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/getipfsuriprops.html" class="tsd-kind-icon">GetIPFSUri<wbr>Props</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/getipfsuriwithchecksumprops.html" class="tsd-kind-icon">GetIPFSUri<wbr>With<wbr>Checksum<wbr>Props</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/ipfsfileinfo.html" class="tsd-kind-icon">IPFSFile<wbr>Info</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/int.html" class="tsd-kind-icon">Int</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/michelsonstorageview.html" class="tsd-kind-icon">Michelson<wbr>Storage<wbr>View</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/pinfiletoipfsprops.html" class="tsd-kind-icon">Pin<wbr>File<wbr>ToIPFSProps</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/pinjsontoipfsprops.html" class="tsd-kind-icon">PinJSONToIPFSProps</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/restapiqueryview.html" class="tsd-kind-icon">Rest<wbr>Api<wbr>Query<wbr>View</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/staticerrortranslator.html" class="tsd-kind-icon">Static<wbr>Error<wbr>Translator</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/stringexpression.html" class="tsd-kind-icon">String<wbr>Expression</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/stringtostreamprops.html" class="tsd-kind-icon">String<wbr>ToStream<wbr>Props</a>
+					</li>
+					<li class=" tsd-kind-interface">
 						<a href="interfaces/tokenmetadata.html" class="tsd-kind-icon">Token<wbr>Metadata</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/tokenmetadatatzip12.html" class="tsd-kind-icon">Token<wbr>MetadataTZIP12</a>
+					</li>
+					<li class=" tsd-kind-interface">
+						<a href="interfaces/tokenmetadatatzip21.html" class="tsd-kind-icon">Token<wbr>MetadataTZIP21</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#bignumber" class="tsd-kind-icon">Big<wbr>Number</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#contractproducingtools" class="tsd-kind-icon">Contract<wbr>Producing<wbr>Tools</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#ipfscid" class="tsd-kind-icon">IPFSCID</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#ipfsuri" class="tsd-kind-icon">IPFSUri</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#ipfsuriwithchecksum" class="tsd-kind-icon">IPFSUri<wbr>With<wbr>Checksum</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#michelinetzip16expression" class="tsd-kind-icon">Micheline<wbr>Tzip16<wbr>Expression</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#sha256checksum" class="tsd-kind-icon">SHA256<wbr>Checksum</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#sequence" class="tsd-kind-icon">Sequence</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#sourcelocation" class="tsd-kind-icon">Source<wbr>Location</a>
+					</li>
+					<li class=" tsd-kind-type-alias">
+						<a href="globals.html#universalstringrepresentation" class="tsd-kind-icon">Universal<wbr>String<wbr>Representation</a>
 					</li>
 					<li class=" tsd-kind-variable">
 						<a href="globals.html#filestoprocess" class="tsd-kind-icon">files<wbr>ToProcess</a>
 					</li>
+					<li class=" tsd-kind-variable">
+						<a href="globals.html#tzip16expressionswithfixedstringexpression" class="tsd-kind-icon">tzip16<wbr>Expressions<wbr>With<wbr>Fixed<wbr>String<wbr>Expression</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#getipfscid" class="tsd-kind-icon">getIPFSCID</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#getipfsuri" class="tsd-kind-icon">getIPFSUri</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#getipfsuriwithchecksum" class="tsd-kind-icon">getIPFSUri<wbr>With<wbr>Checksum</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#getsha256checksum" class="tsd-kind-icon">getSHA256<wbr>Checksum</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#pinfiletoipfs" class="tsd-kind-icon">pin<wbr>File<wbr>ToIPFS</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#pinjsontoipfs" class="tsd-kind-icon">pinJSONToIPFS</a>
+					</li>
 					<li class=" tsd-kind-function">
 						<a href="globals.html#processjsonschema" class="tsd-kind-icon">processJSONSchema</a>
+					</li>
+					<li class=" tsd-kind-function">
+						<a href="globals.html#stringtostream" class="tsd-kind-icon">string<wbr>ToStream</a>
+					</li>
+					<li class=" tsd-kind-object-literal">
+						<a href="globals.html#fixedtzip16schemajson" class="tsd-kind-icon">fixedTZIP16<wbr>SchemaJSON</a>
 					</li>
 				</ul>
 			</nav>
